# Battler_0.3

./: .coverage  .coveragerc  .flake8  .gitignore  PROJECT_TODO.md  README.md  char_str.md  code_collector.py  collected_code.txt  combined_source.txt  demo_bus.py  files_collector.py  main.py  project_tree.txt  pyproject.toml  pytest.ini  requirements-dev.txt
.github/workflows/: ci.yml  lint.yml  test.yml
docs/: PROJECT_TODO.md  style_guide.md
game/: config.py  game_manager.py  logging_config.py  protocols.py  results.py
game/actions/: action.py  basic_attack.py  basic_heal.py  magic_missile.py  rest.py
game/ai/: ai_decision_maker.py  ai_factory.py
game/core/: character_context.py  context.py  game_context.py  property_context.py
game/data/: character_loader.py
game/entities/: character.py  monster.py  player.py
game/events/: __init__.py  battle_events.py  bus.py  character.py  combat.py  encounter_events.py  event.py  render_data.py  reward_events.py
game/factories/: __init__.py  character_factory.py  character_property_factory.py  monster_factory.py  monster_property_factory.py  player_factory.py  player_property_factory.py  property_factory.py
game/mixins/: __init__.py  logging_mixin.py  ui_mixin.py
game/naming/: template_namer.py
game/rewards/: calculator.py  handlers.py  reward.py  sources.py
game/systems/: event_bus.py  (+6 more)
guide/: battle_core_system.txt  style_guide.md  tree.md
tests/: ___test_character.py  test_character.py  test_command_system.py  test_encounter_system.py  test_game_manager.py  test_room_system.py  test_template_namer.py
(+92 files in other folders)
