[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "your-game-name"
version = "0.1.0"
description = "Your game description"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    # Твои зависимости здесь
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "coverage>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["game*"]